# deploykeys-desktop

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLAN.md  PRD.md  QUICKSTART.md  README-zh-CN.md  README.md  STATUS.md  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  windows-installer.yml
crates/deploykeys-app/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
crates/deploykeys-app/assets/images/icns/: icon.icns
crates/deploykeys-app/capabilities/: default.json
crates/deploykeys-app/icons/: icon.icns
crates/deploykeys-app/src/: lib.rs  main.rs
crates/deploykeys-core/: Cargo.toml
crates/deploykeys-core/src/: error.rs  lib.rs  progress.rs
crates/deploykeys-core/src/credentials/: file_store.rs  mod.rs  test_support.rs  validation_tests.rs
crates/deploykeys-core/src/db/: account_repository.rs  github_installation_repository.rs  integration_tests.rs  key_binding_repository.rs  mod.rs  repository_repository.rs  ssh_key_repository.rs  target_repository.rs  test_support.rs  tests.rs
crates/deploykeys-core/src/github/: client.rs  deploy_keys.rs  mod.rs  oauth.rs  repos.rs
crates/deploykeys-core/src/keygen/: local.rs  mod.rs  tests.rs
crates/deploykeys-core/src/models/: account.rs  key_binding.rs  mod.rs  repository.rs  ssh_key.rs  target.rs  tests.rs
crates/deploykeys-core/src/services/: auth_service.rs  key_binding_service.rs  mod.rs  repo_sync_service.rs  ssh_key_service.rs  target_service.rs
crates/deploykeys-core/src/ssh/: command.rs  executor.rs  mod.rs
crates/deploykeys-core/src/utils/: mod.rs  sanitizer.rs
crates/deploykeys-core/src/verification/: mod.rs
crates/deploykeys-gui/: Cargo.toml  tauri.conf.json
crates/deploykeys-gui/src/: lib.rs
crates/deploykeys-ui/: Cargo.toml  Trunk.toml  index.html
crates/deploykeys-ui/src/: api.rs  app.rs  connection.rs  i18n.rs  icons.rs  main.rs  page_size.rs  progress.rs  tauri.rs  theme.rs  toast.rs
crates/deploykeys-ui/src/screens/: connect.rs  keys.rs  mod.rs  oauth.rs  repos.rs  signin.rs  welcome.rs
crates/deploykeys-ui/styles/: input.css  output.css
docs/: I18N_DESIGN.md  THEME_DESIGN.md
docs/archive/: DEEP_CODE_REVIEW.md  ENHANCEMENT_PLAN.md  EXTREME_OPTIMIZATION_PLAN.md  FINAL_ENHANCEMENT_REPORT.md  PHASE1_FINAL_OPTIMIZATION.md  PHASE1_FIX_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_FINAL.md  PHASE2_PLAN.md  S_PLUS_ACHIEVEMENT.md  TEST_COVERAGE_REPORT.md  radiant-dancing-flurry.md
migrations/: 001_initial.sql  002_settings.sql  003_ssh_keys.sql
tools/: install-tailwind.sh
